--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Tugas 12 - PAAS</title>
+    <title>Tugas 12 - PAAS (Kalkulator)</title>
+    <style>
+        body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; }
+        input { margin: 5px; padding: 10px; font-size: 16px; }
+        button { padding: 10px 20px; font-size: 16px; }
+        #result { margin-top: 20px; font-size: 20px; font-weight: bold; }
+    </style>
 </head>
 <body>
     <h1>Tugas 12 - PAAS - Kelompok 4</h1>
@@ -20,6 +26,28 @@
         Muhammad Hilmi Fauzi -
         1301223076
     </p>
-        
+    <h1>Simple Calculator</h1>
+    <input type="number" id="num1" placeholder="Number 1">
+    <input type="number" id="num2" placeholder="Number 2"><br>
+    <button onclick="calculate('+')">+</button>
+    <button onclick="calculate('-')">-</button>
+    <button onclick="calculate('*')">*</button>
+    <button onclick="calculate('/')">/</button>
+    <div id="result"></div>
+
+    <script>
+        function calculate(operator) {
+            const num1 = parseFloat(document.getElementById('num1').value);
+            const num2 = parseFloat(document.getElementById('num2').value);
+            let result;
+
+            if (operator === '+') result = num1 + num2;
+            else if (operator === '-') result = num1 - num2;
+            else if (operator === '*') result = num1 * num2;
+            else if (operator === '/') result = num1 / num2;
+
+            document.getElementById('result').innerText = `Result: ${result}`;
+        }
+    </script>    
 </body>
 </html>
