--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Tugas 14 - Keamanan (Kalkulator)</title>
+    <title>Tugas 15 - (Kalkulator)</title>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; }
         input { margin: 5px; padding: 10px; font-size: 16px; }
@@ -10,7 +10,7 @@
     </style>
 </head>
 <body>
-    <h1>Tugas 14 - Keamanan - Kelompok 4</h1>
+    <h1>Tugas 15 - Studi Kasus - Kelompok 4</h1>
     <p>Ahmad Qadir Jailani - 
         1301220057
     </p>
